Move default ref logic to setup script

--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -93,44 +93,64 @@ jobs:
         env:
           TOKEN: ${{ secrets.GH_REPO_READ_TOKEN }}
           CONFIG: |
-            ${{ inputs.eccodes || 'ecmwf/eccodes@develop' }}:
+            ecmwf/eccodes:
               path: .github/ci-hpc-config.yml
-            ${{ inputs.eccodes-python || 'ecmwf/eccodes-python@develop' }}:
-              path: .github/ci-hpc-config.yml
-              python: true
-            ${{ inputs.cfgrib || 'ecmwf/cfgrib@master' }}:
+              input: ${{ inputs.eccodes }}
+            ecmwf/eccodes-python:
               path: .github/ci-hpc-config.yml
               python: true
-            ${{ inputs.eckit || 'ecmwf/eckit@develop' }}:
+              input: ${{ inputs.eccodes-python }}
+            ecmwf/cfgrib:
               path: .github/ci-hpc-config.yml
-            ${{ inputs.odc || 'ecmwf/odc@develop' }}:
+              master_branch: master
+              develop_branch: master
+              python: true
+              input: ${{ inputs.cfgrib }}
+            ecmwf/eckit:
               path: .github/ci-hpc-config.yml
-            ${{ inputs.pyodc || 'ecmwf/pyodc@develop' }}:
+              input: ${{ inputs.eckit }}
+            ecmwf/odc:
+              path: .github/ci-hpc-config.yml
+              input: ${{ inputs.odc }}
+            ecmwf/pyodc:
               path: .github/ci-hpc-config.yml
               python: true
-            ${{ inputs.metkit || 'ecmwf/metkit@develop' }}:
+              input: ${{ inputs.pyodc }}
+            ecmwf/metkit:
               path: .github/ci-hpc-config.yml
-            ${{ inputs.fdb || 'ecmwf/fdb@develop' }}:
+              input: ${{ inputs.metkit }}
+            ecmwf/fdb:
               path: .github/ci-hpc-config.yml
-            ${{ inputs.pyfdb || 'ecmwf/pyfdb@develop' }}:
-              path: .github/ci-hpc-config.yml
-              python: true
-            ${{ inputs.atlas || 'ecmwf/atlas@develop' }}:
-              path: .github/ci-hpc-config.yml
-            ${{ inputs.fckit || 'ecmwf/fckit@develop' }}:
-              path: .github/ci-hpc-config.yml
-            ${{ inputs.plume || 'ecmwf/plume@develop' }}:
-              path: .github/ci-hpc-config.yml
-            ${{ inputs.mir || 'ecmwf/mir@develop' }}:
-              path: .github/ci-hpc-config.yml
-            ${{ inputs.skinnywms || 'ecmwf/skinnywms@develop' }}:
+              input: ${{ inputs.fdb }}
+            ecmwf/pyfdb:
               path: .github/ci-hpc-config.yml
               python: true
-            ${{ inputs.ecflow || 'ecmwf/ecflow@develop' }}:
+              input: ${{ inputs.pyfdb }}
+            ecmwf/atlas:
               path: .github/ci-hpc-config.yml
-            ${{ inputs.pdbufr || 'ecmwf/pdbufr@master' }}:
+              input: ${{ inputs.atlas }}
+            ecmwf/fckit:
+              path: .github/ci-hpc-config.yml
+              input: ${{ inputs.fckit }}
+            ecmwf/plume:
+              path: .github/ci-hpc-config.yml
+              input: ${{ inputs.plume }}
+            ecmwf/mir:
+              path: .github/ci-hpc-config.yml
+              input: ${{ inputs.mir }}
+            ecmwf/skinnywms:
               path: .github/ci-hpc-config.yml
               python: true
+              input: ${{ inputs.skinnywms }}
+            ecmwf/ecflow:
+              path: .github/ci-hpc-config.yml
+              input: ${{ inputs.ecflow }}
+            ecmwf/pdbufr:
+              path: .github/ci-hpc-config.yml
+              python: true
+              master_branch: master
+              develop_branch: master
+              input: ${{ inputs.pdbufr }}
           SKIP_MATRIX_JOBS: |
             gnu-10.3.0
             ${{ inputs.skip_matrix_jobs }}
@@ -195,8 +215,8 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.eccodes || 'ecmwf/eccodes@develop' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
 
   eccodes-python:
     name: eccodes-python
@@ -215,8 +235,8 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.eccodes-python || 'ecmwf/eccodes-python@develop' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
           dependencies: |
             ${{ inputs.eccodes }}
 
@@ -237,8 +257,8 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.cfgrib || 'ecmwf/cfgrib@master' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
           dependencies: |
             ${{ inputs.eccodes }}
           python_dependencies: |
@@ -261,8 +281,8 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.pdbufr || 'ecmwf/pdbufr@master' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
           dependencies: |
             ${{ inputs.eccodes }}
           python_dependencies: |
@@ -285,8 +305,8 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.eckit || 'ecmwf/eckit@develop' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
 
   odc:
     name: odc
@@ -305,8 +325,8 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.odc || 'ecmwf/odc@develop' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
           dependencies: |
             ${{ inputs.eckit }}
 
@@ -327,8 +347,8 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.pyodc || 'ecmwf/pyodc@develop' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
           dependencies: |
             ${{ inputs.eckit }}
             ${{ inputs.odc}}
@@ -350,8 +370,8 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.metkit || 'ecmwf/metkit@develop' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
           dependencies: |
             ${{ inputs.eckit }}
             ${{ inputs.eccodes }}
@@ -373,8 +393,8 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.fdb || 'ecmwf/fdb@develop' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
           dependencies: |
             ${{ inputs.eckit }}
             ${{ inputs.eccodes }}
@@ -397,8 +417,8 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.pyfdb || 'ecmwf/pyfdb@develop' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
           dependencies: |
             ${{ inputs.eckit }}
             ${{ inputs.eccodes }}
@@ -422,8 +442,8 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.atlas || 'ecmwf/atlas@develop' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
           dependencies: |
             ${{ inputs.eckit }}
             ${{ inputs.fckit }}
@@ -445,8 +465,8 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.fckit || 'ecmwf/fckit@develop' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
           dependencies: |
             ${{ inputs.eckit }}
 
@@ -467,8 +487,8 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.plume || 'ecmwf/plume@develop' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
           dependencies: |
             ${{ inputs.eckit }}
             ${{ inputs.fckit }}
@@ -491,8 +511,8 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.mir || 'ecmwf/mir@develop' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
           dependencies: |
             ${{ inputs.eckit }}
             ${{ inputs.eccodes }}
@@ -515,8 +535,8 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.skinnywms || 'ecmwf/skinnywms@develop' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
 
   ecflow:
     name: ecflow
@@ -535,5 +555,5 @@ jobs:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
-          repository: ${{ inputs.ecflow || 'ecmwf/ecflow@develop' }}
-          build_config: .github/ci-hpc-config.yml
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
