Update setup script docstring

--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -92,6 +92,7 @@ jobs:
       - name: Run setup script
         id: setup
         env:
+          # See setup_downstream_ci.py docstring for syntax
           TOKEN: ${{ secrets.GH_REPO_READ_TOKEN }}
           CONFIG: |
             ecmwf/eccodes:
