--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -318,6 +318,7 @@ jobs:
         with:
           lib_path: ${{ steps.build-deps.outputs.lib_path }}
           python_dependencies: ${{ inputs.eccodes-python || 'ecmwf/eccodes-python@develop' }}
+          requirements_path: tests/downstream-ci-requirements.txt
 
   eckit:
     name: eckit
