Temporarily remove debian-11 from downstream-ci.yml
Because the runner is offline just now

--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -157,7 +157,7 @@ jobs:
             - "3.10"
           MATRIX: |
             name:
-            - gnu@debian-11
+            # - gnu@debian-11
             - gnu-7@centos-7.9
             - gnu-8@centos-7.9
             - gnu@rocky-8.6
