--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -275,7 +275,7 @@ jobs:
           build_dependencies: |
             ${{ inputs.eccodes }}
 
-      - uses: ecmwf-actions/reusable-workflows/ci-python@v2
+      - uses: ecmwf-actions/reusable-workflows/ci-python@main
         with:
           lib_path: ${{ steps.build-deps.outputs.lib_path }}
 
@@ -302,7 +302,7 @@ jobs:
           build_dependencies: |
             ${{ inputs.eccodes }}
 
-      - uses: ecmwf-actions/reusable-workflows/ci-python@v2
+      - uses: ecmwf-actions/reusable-workflows/ci-python@main
         with:
           lib_path: ${{ steps.build-deps.outputs.lib_path }}
           python_dependencies: ${{ inputs.eccodes-python || 'ecmwf/eccodes-python@develop' }}
@@ -330,7 +330,7 @@ jobs:
           build_dependencies: |
             ${{ inputs.eccodes }}
 
-      - uses: ecmwf-actions/reusable-workflows/ci-python@v2
+      - uses: ecmwf-actions/reusable-workflows/ci-python@main
         with:
           lib_path: ${{ steps.build-deps.outputs.lib_path }}
           python_dependencies: ${{ inputs.eccodes-python || 'ecmwf/eccodes-python@develop' }}
